--- a/static/css/login.css
+++ b/static/css/login.css
@@ -20,6 +20,7 @@ body{
 }
 .login-box div{
     text-align: center;
+
 }
 
 .login-box div h1 {
@@ -47,6 +48,7 @@ body{
     border-radius: 8px;
     height:40px;
     width: 250px;
+    color:whitesmoke
 
 }
 .login-button{
