--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -40,7 +40,7 @@ body {
 
     background-color: black;
 }
-.user_img {
+.user_img_box img {
     width: 100%;
 }
 .user_id_box {
@@ -64,22 +64,24 @@ body {
 .menu_change_button_box {
     padding: 10px;
 }
-.menu_change_button {
+.menu_change_button_box button {
     font-size: 15px;
 }
-.article_container {
+.show_container {
     display: flex;
+}
+.show_box {
+    width: 100%;
+
+    padding: 20px 20px 20px 20px;
+    border-radius: 3px;
+
+    background-color: #ffffff;
 }
 .article_box {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
-    /* width: 700px;  */
-    padding: 20px 20px 20px 20px;
-    border-radius: 3px;
-
-    background-color: #ffffff;
 }
 .article_card {
     width: 190px;
@@ -88,9 +90,14 @@ body {
 
     background-color: #D9D9D9;
 }
-.article_img {
+.article_card img {
     width: 100%;
     /* height: 100%; */
+}
+.user_info_box {
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .pet_select_box {
     display: flex;
