--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -498,7 +498,7 @@ h1 {
     overflow-y: hidden;
     -ms-overflow-style: none;
     scrollbar-width: none;
-    /* display: none; */
+    display: none;
     /* IE and Edge */
     /* scrollbar-width: none;  */
     /* Firefox */
