--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -5,7 +5,8 @@ h1 {
     background: #C4D7E0;
     /* overflow-x: hidden; */
 }
-.body_scroll_stop{
+
+.body_scroll_stop {
     overflow: hidden;
     touch-action: none;
 }
@@ -133,7 +134,7 @@ h1 {
 }
 
 .menu_petshop {
-    
+
     display: flex;
     flex-direction: column;
 }
@@ -142,13 +143,15 @@ h1 {
     width: 30px;
     height: 30px;
 }
-.menu_upload{
+
+.menu_upload {
     display: flex;
     flex-direction: column;
 }
-.menu_upload img{
-    width:30px;
-    height:30px;
+
+.menu_upload img {
+    width: 30px;
+    height: 30px;
 }
 
 .top_section {
@@ -328,6 +331,16 @@ h1 {
     display: none;
 }
 
+.modal_image_count {
+    position: absolute;
+    bottom: 15px;
+    color: white;
+    font-size: 20px;
+    background: #000;
+    padding: 5px 7px;
+    border-radius: 7px;
+}
+
 .modal_content {
     position: relative;
     width: 1000px;
@@ -337,29 +350,141 @@ h1 {
     display: flex;
     border-radius: 8px;
     overflow: hidden;
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    /* justify-content: center; */
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .modal_content img {
-    width: 98%;
-    height: 98%;
+    width: 70%;
+    height: 100%;
     object-fit: cover;
 }
-.modal_desc{
-    position: absolute;
-    width: 85%;
-    height: 85%;
-    background-color: white;
-    border-radius: 50px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    animation: scale 0.5s;
-    display: none;
 
+.modal_user_profile {
+    padding: 15px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
 }
-.modal_info_btn{
+
+.modal_user_profile img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.modal_user_profile div {
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.modal_content_list {
+    padding: 15px;
+    padding-top: 0px;
+}
+
+.modal_content_list div {
+    padding: 5px;
+    font-size: 14px;
+    /* border-bottom: 1px solid #e7e7e7; */
+}
+
+.modal_comment_text {
+    margin: 7px 0px;
+}
+
+.balloon_03 {
+    position: relative;
+    margin: 1px 25px;
+    width: fit-content;
+    height: auto;
+    background: #EAF6F6;
+    border-radius: 10px;
+    color: #FF0063;
+    font-size: 14px;
+    display: flex;
+    /* justify-content: center; */
+}
+
+.modal_comment_user {
+    font-size: 10px;
+    float: right;
+    margin: 0 25px;
+}
+
+.modal_comment_list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    overflow: scroll;
+    height: 100%;
+}
+
+.modal_comment_submit {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    width: 30px;
+    height: 20px;
+    background: rgb(0, 47, 255);
+    color: white;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9px;
+}
+
+.balloon_03 div {
+    padding: 10px;
+}
+
+.balloon_03:after {
+    border-top: 15px solid #EAF6F6;
+    border-left: 15px solid transparent;
+    border-right: 0px solid transparent;
+    border-bottom: 0px solid transparent;
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: -15px;
+}
+
+.modal_comment_input {
+    width: 100%;
+    height: auto;
+    border: 1px solid #e7e7e7;
+    border-radius: 8px;
+    margin-top: 10px;
+    display: flex;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.modal_comment_input textarea {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+}
+
+.modal_desc {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+}
+
+.modal_info_btn {
     cursor: pointer;
     position: absolute;
     width: 120px;
@@ -372,11 +497,12 @@ h1 {
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    top:10px;
-    right:10px;
+    top: 10px;
+    right: 10px;
     /* display: none; */
 }
-.modal_close{
+
+.modal_close {
     cursor: pointer;
     position: absolute;
     width: 120px;
@@ -389,32 +515,36 @@ h1 {
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    top:10px;
-    right:10px;
+    top: 10px;
+    right: 10px;
     display: none;
 }
-.modal_profile{
+
+.modal_profile {
     top: 10px;
     left: 10px;
     position: absolute;
     display: flex;
     align-items: center;
 }
-.modal_profile img{
+
+.modal_profile img {
     margin-right: 10px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: #e7e7e7 solid 5px;
 }
-.modal_profile_account{
+
+.modal_profile_account {
     font-size: 14px;
     padding: 5px 10px;
     font-weight: bold;
     background-color: white;
     border-radius: 10px;
 }
-.modal_like{
+
+.modal_like {
     position: absolute;
     bottom: 20px;
     right: 20px;
@@ -424,7 +554,8 @@ h1 {
     font-size: 20px;
     font-weight: bold;
 }
-.upload_modal{
+
+.upload_modal {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -437,7 +568,8 @@ h1 {
     z-index: 9999;
     display: none;
 }
-.upload_modal_box{
+
+.upload_modal_box {
     position: relative;
     width: 800px;
     height: 700px;
@@ -449,7 +581,8 @@ h1 {
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
-.upload_modal_btn{
+
+.upload_modal_btn {
     display: flex;
     align-items: center;
     color: red;
@@ -459,10 +592,11 @@ h1 {
     cursor: pointer;
     /* display: none; */
 }
-.upload_submit_button{
+
+.upload_submit_button {
     position: absolute;
-    top:0px;
-    left:0px;
+    top: 0px;
+    left: 0px;
     display: flex;
     align-items: center;
     color: red;
@@ -474,19 +608,22 @@ h1 {
     display: none;
     z-index: 30;
 }
-.upload_submit_button i{
+
+.upload_submit_button i {
     margin: 5px;
     z-index: 10;
 }
-.preview_img{
+
+.preview_img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: none;
 }
-.preview_multi_img{
-    top:0;
-    right:0;
+
+.preview_multi_img {
+    top: 0;
+    right: 0;
     position: absolute;
     display: flex;
     /* justify-content: center; */
@@ -503,7 +640,8 @@ h1 {
     /* scrollbar-width: none;  */
     /* Firefox */
 }
-.preview_multi_img img{
+
+.preview_multi_img img {
     width: 80%;
     height: 100px;
     padding: 5px;
@@ -513,7 +651,8 @@ h1 {
     /* border-style: dotted; */
     border-radius: 10px;
 }
-.upload_model_content{
+
+.upload_model_content {
     width: 20%;
     margin-left: 5px;
     height: 700px;
@@ -528,7 +667,8 @@ h1 {
     animation: fadeinleft 0.5s;
     display: none;
 }
-.upload_model_content textarea{
+
+.upload_model_content textarea {
     width: 95%;
     height: 95%;
     border: none;
@@ -541,7 +681,8 @@ h1 {
     -ms-overflow-style: none;
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
 }
-.load_img{
+
+.load_img {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -551,18 +692,21 @@ h1 {
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     z-index: 99999;
-    
+
 }
-.load_img img{ 
+
+.load_img img {
     width: 200px;
     height: 200px;
     animation: rotate 0.5s;
 }
+
 @keyframes fadeinleft {
     0% {
         opacity: 0;
         transform: translateX(-100%);
     }
+
     100% {
         opacity: 1;
         transform: translateX(0);
@@ -573,6 +717,7 @@ h1 {
     0% {
         transform: scale(0.5);
     }
+
     100% {
         transform: scale(1.0);
     }
