--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -13,6 +13,87 @@ body {
     
     background-color: #D9D9D9;
 }
+
+.left_menu {
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 8px;
+    margin: 30px;
+    width: 150px;
+    height: 350px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 20px;
+    left: 0;
+}
+
+.left_menu div {
+    cursor: pointer;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+}
+
+.menu_dog {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu_dog img {
+    width: 30px;
+    height: 30px;
+}
+
+.menu_cat {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu_cat img {
+    width: 30px;
+    height: 30px;
+}
+
+.menu_petshop {
+
+    display: flex;
+    flex-direction: column;
+}
+
+.menu_petshop img {
+    width: 30px;
+    height: 30px;
+}
+
+.menu_upload {
+    display: flex;
+    flex-direction: column;
+}
+
+.menu_upload img {
+    width: 30px;
+    height: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .user_container {
     display: flex;
     justify-content: space-between;
