--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -286,3 +286,245 @@ body {
     background-color: #eeecec;
 
 }
+
+/*디테일 모달*/
+
+
+
+.modal_box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none;
+}
+
+.modal_image_count {
+    position: absolute;
+    bottom: 15px;
+    color: white;
+    font-size: 20px;
+    background: #000;
+    padding: 5px 7px;
+    border-radius: 7px;
+}
+
+.modal_content {
+    position: relative;
+    width: 1000px;
+    height: 90%;
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    border-radius: 8px;
+    overflow: hidden;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.modal_content img {
+    width: 70%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.modal_user_profile {
+    padding: 15px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.modal_user_profile img {
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.modal_user_profile div {
+    padding-left: 10px;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.modal_content_list {
+    padding: 15px;
+    padding-top: 0px;
+}
+
+.modal_content_list div {
+    padding: 5px;
+    font-size: 14px;
+    /* border-bottom: 1px solid #e7e7e7; */
+}
+
+.modal_comment_text {
+    margin: 7px 0px;
+}
+
+.balloon_03 {
+    position: relative;
+    margin: 1px 25px;
+    width: fit-content;
+    height: auto;
+    background: #EAF6F6;
+    border-radius: 10px;
+    color: #FF0063;
+    font-size: 14px;
+    display: flex;
+    /* justify-content: center; */
+}
+
+.modal_comment_user {
+    font-size: 10px;
+    float: right;
+    margin: 0 25px;
+}
+
+.modal_comment_list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    overflow: scroll;
+    height: 100%;
+}
+
+.modal_comment_submit {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    width: 30px;
+    height: 20px;
+    background: rgb(0, 47, 255);
+    color: white;
+    font-size: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 9px;
+}
+
+.balloon_03 div {
+    padding: 10px;
+}
+
+.balloon_03:after {
+    border-top: 15px solid #EAF6F6;
+    border-left: 15px solid transparent;
+    border-right: 0px solid transparent;
+    border-bottom: 0px solid transparent;
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: -15px;
+}
+
+.modal_comment_input {
+    width: 100%;
+    height: auto;
+    border: 1px solid #e7e7e7;
+    border-radius: 8px;
+    margin-top: 10px;
+    display: flex;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.modal_comment_input textarea {
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+}
+
+.modal_desc {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+}
+
+.modal_info_btn {
+    cursor: pointer;
+    position: absolute;
+    width: 120px;
+    height: 40px;
+    background: #000;
+    color: white;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    top: 10px;
+    right: 10px;
+    /* display: none; */
+}
+
+.modal_close {
+    cursor: pointer;
+    position: absolute;
+    width: 120px;
+    height: 40px;
+    background: #000;
+    color: white;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    top: 10px;
+    right: 10px;
+    display: none;
+}
+
+.modal_profile {
+    top: 10px;
+    left: 10px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+}
+
+.modal_profile img {
+    margin-right: 10px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: #e7e7e7 solid 5px;
+}
+
+.modal_profile_account {
+    font-size: 14px;
+    padding: 5px 10px;
+    font-weight: bold;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.modal_like {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+}
