--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -284,11 +284,11 @@ h1 {
 }
 
 .main_article_list {
-    width: 95%;
+    width: 100%;
     display: flex;
+    align-items: center;
+    margin: 30px;
     flex-wrap: wrap;
-    margin-left: 50px;
-    margin-top: 30px;
     justify-content: center;
     border: 10px solid #e7e7e7;
     border-style: dotted;
@@ -297,8 +297,8 @@ h1 {
 
 .article_list_box {
     flex-shrink: 0;
-    margin: 50px;
-    width: 330px;
+    margin: 30px 40px;
+    width: 250px;
     height: 250px;
     background-color: aliceblue;
     border-radius: 8px;
@@ -310,9 +310,31 @@ h1 {
     transform: rotate(5deg);
     background-color: rgb(255, 255, 255);
 }
+.article_list_like{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+.article_list_like div {
+    font-size: 30px;
+    font-weight: bold;
+    margin: 5px;
+}
+.article_list_like div span{
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 7px;
+}
 
 .article_list_box img {
-    width: 300px;
+    width: 90%;
     height: 90%;
     object-fit: cover;
 }
