--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     background-color: #C4D7E0;
 }
+::-webkit-scrollbar { display: none; }
 .main_container{
     display: flex;
     justify-content: center;
