--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -89,6 +89,16 @@ h1 {
     color: #000;
 }
 
+.logout{
+    cursor: pointer;
+    margin-left: 10px;
+    font-size: 10px;
+    background: blue;
+    padding: 5px 10px;
+    border-radius: 10px;
+    color: white;
+}
+
 .left_menu {
     flex-shrink: 0;
     display: flex;
@@ -352,6 +362,52 @@ h1 {
     z-index: 9999;
     display: none;
 }
+.like_icon_on{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    width: fit-content;
+    height: auto;
+    color: red;
+    font-size: 25px;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.like_icon_off{
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    width: fit-content;
+    height: auto;
+    font-size: 25px;
+    color: red;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.like_icon_off span{
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 7px;
+}
+.like_icon_on span{
+    font-size: 25px;
+    font-weight: bold;
+    margin-left: 7px;
+}
+.heart_ani{
+    left: 32%;
+    bottom: 60%;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    font-size: 50px;
+    display: none;
+    animation: scale150 0.7s;
+    opacity: 0.2;
+    color: #cecece;
+}
 
 .modal_image_count {
     position: absolute;
@@ -376,6 +432,14 @@ h1 {
     /* justify-content: center; */
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+.article_delete{
+    cursor: pointer;
+    position: absolute;
+    right: 5px;
+    top: 0px;
+    font-size: 15px;
+    display: none;
 }
 
 .modal_content img {
@@ -742,5 +806,14 @@ h1 {
 
     100% {
         transform: scale(1.0);
+    }
+}
+@keyframes scale150 {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(5);
     }
 }
