--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -89,7 +89,7 @@ h1 {
     color: #000;
 }
 
-.logout{
+.logout {
     cursor: pointer;
     margin-left: 10px;
     font-size: 10px;
@@ -320,7 +320,8 @@ h1 {
     transform: rotate(5deg);
     background-color: rgb(255, 255, 255);
 }
-.article_list_like{
+
+.article_list_like {
     position: absolute;
     display: flex;
     align-items: center;
@@ -332,13 +333,15 @@ h1 {
     cursor: pointer;
     display: none;
 }
+
 .article_list_like div {
-    font-size: 30px;
+    font-size: 17px;
     font-weight: bold;
-    margin: 5px;
+    margin: 2px;
 }
-.article_list_like div span{
-    font-size: 30px;
+
+.article_list_like div span {
+    font-size: 17px;
     font-weight: bold;
     margin-left: 7px;
 }
@@ -362,51 +365,58 @@ h1 {
     z-index: 9999;
     display: none;
 }
-.like_icon_on{
+
+.like_icon_on {
     position: absolute;
     left: 10px;
     bottom: 10px;
     width: fit-content;
     height: auto;
     color: red;
-    font-size: 25px;
+    font-size: 20px;
     justify-content: center;
     align-items: center;
     display: none;
+    text-align: center;
 }
-.like_icon_off{
+
+.like_icon_off {
     position: absolute;
     left: 10px;
     bottom: 10px;
     width: fit-content;
     height: auto;
-    font-size: 25px;
+    font-size: 20px;
     color: red;
     justify-content: center;
     align-items: center;
     display: none;
 }
-.like_icon_off span{
-    font-size: 25px;
+
+.like_icon_off span {
+    font-size: 13px;
     font-weight: bold;
     margin-left: 7px;
+    text-align: center;
 }
-.like_icon_on span{
-    font-size: 25px;
+
+.like_icon_on span {
+    font-size: 13px;
     font-weight: bold;
     margin-left: 7px;
+    text-align: center;
 }
-.heart_ani{
-    left: 32%;
-    bottom: 60%;
+
+.heart_ani {
+    left: 29.5%;
+    bottom: 55%;
     position: absolute;
     width: 30px;
     height: 30px;
     font-size: 50px;
     display: none;
     animation: scale150 0.7s;
-    opacity: 0.2;
-    color: #cecece;
+    color: rgba(255, 0, 0, 0.3);
 }
 
 .modal_image_count {
@@ -433,13 +443,15 @@ h1 {
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
-.article_delete{
+
+.article_delete {
     cursor: pointer;
     position: absolute;
     right: 5px;
-    top: 0px;
-    font-size: 15px;
+    top: 5px;
+    font-size: 20px;
     display: none;
+    color: yellowgreen;
 }
 
 .modal_content img {
@@ -482,6 +494,9 @@ h1 {
 }
 
 .modal_comment_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     margin: 7px 0px;
 }
 
@@ -497,11 +512,28 @@ h1 {
     display: flex;
     /* justify-content: center; */
 }
-
 .modal_comment_user {
+    display: flex;
+    width: fit-content + 10px;
+    justify-content: flex-end;
     font-size: 10px;
-    float: right;
-    margin: 0 25px;
+    margin: 2px 0px;
+    margin-right: 25px;
+    color: green;
+    font-weight: bold;
+    cursor: pointer;
+    font-size:8px;
+}
+.modal_comment_user div{
+    margin: 0px 2px;
+}
+.modal_comment_user div:nth-child(1){
+    font-weight: bold;
+    color: #000;
+}
+.modal_comment_user div:nth-child(2){
+    font-weight: bold;
+    color: red;
 }
 
 .modal_comment_list {
@@ -529,7 +561,7 @@ h1 {
 }
 
 .balloon_03 div {
-    padding: 10px;
+    padding: 10px
 }
 
 .balloon_03:after {
@@ -808,6 +840,7 @@ h1 {
         transform: scale(1.0);
     }
 }
+
 @keyframes scale150 {
     0% {
         transform: scale(1);
