--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -11,8 +11,9 @@ body {
 
     width: 60%;
     padding: 20px 20px 50px 50px;
-    
-    background-color: #D9D9D9;
+    /* border-radius: 8px;     */
+    border: 10px solid #e7e7e7;
+    border-style: dotted;
 }
 
 .left_menu {
@@ -122,7 +123,10 @@ body {
     background-color: black;
 }
 .user_img_box img {
-    width: 100%;
+    
+    width:100%;
+    height:100%;
+    object-fit:cover
 }
 .user_id_box {
     display: flex;
@@ -159,8 +163,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
+    border-radius:8px;
     background-color: #ffffff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    min-height:500px;
 }
 .article_card {
     width: 190px;
@@ -180,6 +186,16 @@ body {
     transition: transform 0.5s;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
 }
+.like_article_box{
+    background-color:#6e85b7; 
+    width:100%; 
+    height:100%;
+    display:none; 
+    min-height: 500px; 
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
 .user_info_box {
     display: none;
     flex-wrap: wrap;
@@ -287,6 +303,8 @@ body {
     background-color: #eeecec;
 
 }
+
+
 
 /*디테일 모달*/
 
