--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -82,6 +82,19 @@ body {
     height: 30px;
 }
 
+.menu_change_button{
+    border:none;
+    background-color: #6e85b7;
+    color: white;
+    font-weight: bold;
+    height:30px;
+    border-radius: 3px;
+}
+.menu_change_button:hover{
+    background-color: #f8f9d7;
+    color: rgb(70, 69, 74);
+}
+
 
 
 
@@ -200,7 +213,7 @@ body {
 }
 .like_article_box{
     display: flex;
-    background-color:#6e85b7; 
+    background-color:#c4d7e0; 
     width:100%; 
     height:100%;
     width:850px;    
