--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -2,7 +2,6 @@ body,
 p,
 h1 {
     margin: 0;
-    background: #C4D7E0;
     /* overflow-x: hidden; */
 }
 
@@ -452,6 +451,72 @@ h1 {
     font-size: 20px;
     display: none;
     color: yellowgreen;
+}
+.article_edit{
+    cursor: pointer;
+    position: absolute;
+    right: 30px;
+    top: 5px;
+    font-size: 20px;
+    display: none;
+    color: yellowgreen;
+}
+.modal_edit_box{
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.modal_edit_button{
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    background: #000;
+    color: white;
+}
+.modal_edit_cancel{
+    cursor: pointer;
+    position: absolute;
+    bottom: 0;
+    right: 50px;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    background: #000;
+    color: white;
+}
+.modal_edit_box_input{
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal_edit_box textarea{
+    width: 100%;
+    height: 100%;
+    border: none;
+    resize: none;
+    font-size: 12px;
+    font-weight: bold;
+    color: #545454;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+.modal_edit_box textarea:focus{
+    outline: none;
 }
 
 .modal_content img {
