--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -4,6 +4,9 @@ h1 {
     margin: 0;
     /* overflow-x: hidden; */
 }
+body {
+    background-color: #C4D7E0;
+}
 
 .body_scroll_stop {
     overflow: hidden;
@@ -27,6 +30,7 @@ h1 {
     display: flex;
     top: 0;
     left: 0;
+    margin-bottom: 30px;
     z-index: 1;
 }
 
@@ -230,14 +234,25 @@ h1 {
     font-weight: bold;
 }
 
-.top_article_info div:nth-child(1) {
-    background-color: #000000;
-    width: fit-content;
-    padding: 3px 5px;
-    border-radius: 8px;
+.article_like_info {
+    display: flex;
+    margin: 0px 0px 12px 0px;
+}
+.article_like_info div:nth-child(1){
+    margin: 0px 3px 0px 0px;
     font-size: 12px;
+    border-radius: 9px;
+    background-color: rgb(255, 65, 65);
     color: white;
-    margin-bottom: 15px;
+    padding: 3px 10px;
+}
+.article_like_info div:nth-child(2){
+    margin: 0px 3px 0px 0px;
+    font-size: 12px;
+    border-radius: 9px;
+    background-color: #000;
+    color: white;
+    padding: 3px 10px;
 }
 
 .top_article_info div:nth-child(3) {
@@ -364,8 +379,31 @@ h1 {
     z-index: 9999;
     display: none;
 }
+.like_user_list{
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+    position: absolute;
+    bottom: 33px;
+    left: 10px;
+    width: 100px;
+    height: fit-content;
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid #e7e7e7;
+    animation: fadeintop 0.5s;
+    display: none;
+}
+.like_user_list div{
+    margin-bottom: 2px;
+}
 
 .like_icon_on {
+    cursor: pointer;
     position: absolute;
     left: 10px;
     bottom: 10px;
@@ -380,6 +418,7 @@ h1 {
 }
 
 .like_icon_off {
+    cursor: pointer;
     position: absolute;
     left: 10px;
     bottom: 10px;
@@ -407,8 +446,8 @@ h1 {
 }
 
 .heart_ani {
-    left: 29.5%;
-    bottom: 55%;
+    left: calc(35% - 30px);
+    bottom: calc(50% + 30px);
     position: absolute;
     width: 30px;
     height: 30px;
@@ -520,7 +559,7 @@ h1 {
 }
 
 .modal_content img {
-    width: 70%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
 }
@@ -639,16 +678,50 @@ h1 {
     top: 10px;
     left: -15px;
 }
+.slide_right{
+    position: absolute;
+    top: calc(50% - 30px);
+    right: calc(30% + 10px);
+    width: 30px;
+    height: 30px;
+    color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    /* display: none; */
+    /* z-index: 999999999; */
+}
+.slide_left{
+    position: absolute;
+    top: calc(50% - 30px);
+    left: 10px;
+    width: 30px;
+    height: 30px;
+    color: rgba(0,0,0,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    /* display: none; */
+    /* z-index: 999999999; */
+}
+.modal_img_box{
+    width: 70%;
+    height: 100%;
+}
 
 .modal_comment_input {
-    width: 100%;
+    margin: 0 auto;
+    width: 98%;
     height: auto;
-    border: 1px solid #e7e7e7;
-    border-radius: 8px;
-    margin-top: 10px;
+    padding: 10px 1%;
+    border-top: 3px dotted #d9d9d9;
     display: flex;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
 .modal_comment_input textarea {
@@ -882,6 +955,19 @@ h1 {
     width: 200px;
     height: 200px;
     animation: rotate 0.5s;
+}
+
+/* top transform */
+@keyframes fadeintop {
+    from {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes fadeinleft {
