--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -591,3 +591,102 @@ body {
     font-size: 20px;
     font-weight: bold;
 }
+
+
+/* 반려동물 등록 모달 */
+
+.add_pet_modal_box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    display: none;
+}
+
+.add_pet_modal_content {
+    position: relative;
+    /* width: 90%;
+    height: 90%; */
+    background-color: white;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    overflow: hidden;
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.add_pet_profile_box {
+    display: flex;
+    height: 500px;
+    padding: 30px 30px 10px 30px;
+}
+
+.add_pet_profile_box_l {
+    display: flex;
+    flex-direction: column;
+    width: 230px;
+    margin-right: 30px;
+    
+}
+
+.add_pet_profile_box_r {
+    display: flex;
+    flex-direction: column;
+    width: 230px;
+    margin-left: 30px;
+    /* padding: 30px; */
+}
+
+.add_pet_profile_img {
+    width: 100%;
+    height: 230px;
+    margin: 20px 0px 20px 0px;
+    /* border-radius: 50px; */
+    overflow: hidden;
+    background-color: #9a9a9a;
+}
+
+.add_pet_profile_img img {
+    width: 230px;
+}
+
+.add_pet_profile_item {
+    margin: 20px 0px auto 0px;
+}
+
+.add_pet_profile_item p {
+    margin: 10px 0 10px 0;
+}
+
+.add_pet_profile_item button {
+    margin-left: 10px;
+    padding: 0;
+    
+}
+.add_pet_profile_item input {
+    height: 30px;
+    font-size: 15px;
+    padding: 0 5px 0 5px;
+}
+.add_pet_profile_item select {
+    height: 30px;
+    font-size: 15px;
+}
+.add_pet_profile_save {
+    display: flex;
+    justify-content: center;
+    margin: 10px auto 20px auto;
+}
+.add_pet_profile_save button {
+    font-size: 17px;
+}
