edit 회원가입 버튼 드롭다운으로 수정

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -88,5 +88,10 @@ body{
     border-radius: 8px;
     height:40px;
     width: 250px;
-    color:whitesmoke
+    color:whitesmoke;
+}
+.date_wrapper{
+    display:block;
+    margin:20px 0;
+    background-color: transparent;
 }
