--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -4,6 +4,9 @@ h1 {
     margin: 0;
     /* overflow-x: hidden; */
 }
+h2,h3,h4{
+    margin: 0;
+}
 body {
     background-color: #C4D7E0;
 }
@@ -685,7 +688,8 @@ body {
     right: calc(30% + 10px);
     width: 30px;
     height: 30px;
-    color: rgba(0,0,0,0.5);
+    color: white;
+    /* color: rgba(0,0,0,0.5); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -699,7 +703,8 @@ body {
     left: 10px;
     width: 30px;
     height: 30px;
-    color: rgba(0,0,0,0.5);
+    color: white;
+    /* color: rgba(0,0,0,0.5); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -825,7 +830,6 @@ body {
     z-index: 9999;
     display: none;
 }
-
 .upload_modal_box {
     position: relative;
     width: 800px;
@@ -837,6 +841,62 @@ body {
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+.pet_profile_select{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-bottom: 10px;
+}
+
+input[type=radio] {
+    display: none;
+}
+input[type=radio] + label {
+    position: relative;
+    margin: 5px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
+    border: 4px solid rgba(0, 0, 0, 0.0);
+    border-radius: 20px;
+    background-color: #fff;
+    cursor: pointer;
+    color : rgba(0, 0, 0, 0.0)
+}
+input[type=radio] + label img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+input[type=radio] + label div{
+   position: absolute;
+   font-weight: bold;
+   font-size: 50px;
+}
+input[type=radio]:checked + label {
+    color: #FF0063;
+    border: 4px solid #FF0063;
+    
+}
+input[type=radio]:checked + label img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.pet_name{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color:white;
+    background: #000;
+    font-size: 13px;
+    font-weight: 500;
+    padding: 2px 4px;
+    border-radius: 5px;
 }
 
 .upload_modal_btn {
@@ -927,7 +987,8 @@ body {
 
 .upload_model_content textarea {
     width: 95%;
-    height: 95%;
+    margin-top: 10px;
+    height: 100%;
     border: none;
     resize: none;
     outline: none;
