--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -289,6 +289,7 @@ body {
     margin: 7px;
     height: 210px;
 
+    cursor: pointer;
     border-radius: 17px;
     border: 1px solid #9a9a9a;
     background-color: #ffffff;
