--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1065,37 +1065,36 @@ body {
     color: red;
     font-size: 20px;
     font-weight: bold;
-} */
+}
 
 
 /* 반려동물 등록 모달 */
 
-.add_pet_modal_box {
-    width: 100%;
-    height: 100%;
+.add_pet_modal_box1 {
+    width: 1200px;
+    height: 700px;
     position: fixed;
     top: 0;
-    left: 0;
+    left: 0; 
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999;
-    display: none;
+    display: flex;
 }
 
 .add_pet_modal_content {
+    top:0;
     position: relative;
-    /* width: 90%;
-    height: 90%; */
-    background-color: white;
+    width: 1000px;
+    height: 90%;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     border-radius: 8px;
     overflow: hidden;
-    /* flex-direction: column; */
-    /* justify-content: center; */
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
