--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1070,23 +1070,25 @@ body {
 
 /* 반려동물 등록 모달 */
 
-.add_pet_modal_box1 {
-    width: 1200px;
-    height: 700px;
+.add_pet_modal_box {
+    width: 100%;
+    height: 100%;
     position: fixed;
     top: 0;
     left: 0; 
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    display: flex;
+
 }
 
 .add_pet_modal_content {
     top:0;
+    background-color: white;
     position: relative;
-    width: 1000px;
+    width: 900px;
+    z-index:999;
     height: 90%;
     border-radius: 8px;
     display: flex;
