--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -35,6 +35,7 @@ body {
     left: 0;
     margin-bottom: 30px;
     z-index: 1;
+    /* overflow: hidden; */
 }
 
 .logo {
@@ -73,10 +74,50 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-right: 10px;
+    /* margin-right: 20px; */
 }
 
+.alarm{
+    position: relative;
+    margin-right: 10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #ff0000;
+    color: #fff;
+    text-align: center;
+    line-height: 30px;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.user_name{
+    font-size: 12px;
+    font-weight: bold;
+    color: #000;
+    margin-right: 10px;
+    border-radius: 5px;
+    padding: 2px 5px;
+    background-color: #e7e7e7;
+}
+.history{
+    width: 200px;
+    height: fit-content;
+    max-height: 600px;
+    background-color: #fff;
+    border-radius: 5px;
+    position: absolute;
+    left: -40px;
+    top: 33px;
+    z-index: 2;
+    color: #000;
+    font-size: 10px;
+    box-shadow: 0px 0px 5px rgba(254, 114, 114, 0.438);
+    animation: reveal 0.5s ease-in-out;
+    display: none;
+}
 .user_profile {
+    cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,13 +137,14 @@ body {
 }
 
 .logout {
+    margin-right: 20px;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
     cursor: pointer;
-    margin-left: 10px;
-    font-size: 10px;
-    background: blue;
-    padding: 5px 10px;
-    border-radius: 10px;
-    color: white;
+    border-radius: 5px;
+    padding: 2px 5px;
+    background-color: #ff0000;
 }
 
 .left_menu {
@@ -1074,4 +1116,21 @@ input[type=radio]:checked + label img {
     100% {
         transform: scale(5);
     }
+}
+
+@keyframes fadeinbottom{
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes reveal {
+    from { opacity:0; transform:translate3d(0, -5px, 0); }
+    to { opacity:1; transform:translate3d(0, 0, 0); }
 }
