feat 팻 게시물 탭 구현

--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -541,6 +541,7 @@ body {
     position: relative;
     width: 1000px;
     height: 95%;
+    max-height: 800px;
     background-color: white;
     border-radius: 8px;
     display: flex;
